dashboard index logo style

--- a/dashboard.html
+++ b/dashboard.html
@@ -1,11 +1,16 @@
+
 <!DOCTYPE html>
 <html lang="sv">
 <head>
-    <meta charset="UTF-8">
-    <title>Dashboard</title>
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
+  <title>RättSagt – Intern sida</title>
+  <link rel="stylesheet" href="style.css"/>
 </head>
 <body>
-    <h1>Välkommen till adminpanelen</h1>
-    <p>Den här sidan är bara synlig efter korrekt inloggning.</p>
+  <div class="dashboard">
+    <h1>Välkommen till den interna sidan</h1>
+    <p>Här kommer mer innehåll snart.</p>
+  </div>
 </body>
 </html>
