--- a/index.html
+++ b/index.html
@@ -1,29 +1,39 @@
+
 <!DOCTYPE html>
 <html lang="sv">
 <head>
-    <meta charset="UTF-8">
-    <title>Rätt Sagt - Inloggning</title>
-    <style>
-        body { font-family: Arial, sans-serif; display: flex; justify-content: center; align-items: center; height: 100vh; background-color: #f4f4f4; }
-        .login-box { background: white; padding: 2rem; border-radius: 8px; box-shadow: 0 0 10px rgba(0,0,0,0.1); }
-    </style>
+  <meta charset="UTF-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
+  <title>RättSagt – Logga in</title>
+  <link rel="stylesheet" href="style.css"/>
+  <script>
+    if (location.protocol !== 'https:') {
+      location.href = 'https:' + window.location.href.substring(window.location.protocol.length);
+    }
+  </script>
 </head>
 <body>
-<div class="login-box">
-    <h2>Logga in</h2>
-    <input type="password" id="pwd" placeholder="Lösenord" />
-    <button onclick="login()">Logga in</button>
-    <p id="status" style="color:red;"></p>
-</div>
-<script>
-    function login() {
-        const password = document.getElementById('pwd').value;
-        if (password === "Admin1234") {
-            window.location.href = "dashboard.html";
-        } else {
-            document.getElementById('status').textContent = "Fel lösenord.";
-        }
+  <div class="login-container">
+    <div class="login-box">
+      <img src="logo.png" alt="RättSagt logotyp" class="logo"/>
+      <h1>Logga in</h1>
+      <form onsubmit="login(event)">
+        <input type="password" id="password" placeholder="Lösenord" required/>
+        <button type="submit">Logga in</button>
+      </form>
+      <p id="error" class="error-message"></p>
+    </div>
+  </div>
+  <script>
+    function login(e) {
+      e.preventDefault();
+      const password = document.getElementById("password").value;
+      if (password === "rattsagt2024") {
+        window.location.href = "dashboard.html";
+      } else {
+        document.getElementById("error").textContent = "Fel lösenord. Försök igen.";
+      }
     }
-</script>
+  </script>
 </body>
 </html>
