--- a/dashboard.html
+++ b/dashboard.html
@@ -1,16 +1,22 @@
-
 <!DOCTYPE html>
 <html lang="sv">
 <head>
-  <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
-  <title>RättSagt – Intern sida</title>
-  <link rel="stylesheet" href="style.css"/>
+    <meta charset="UTF-8">
+    <title>Adminpanel – Rätt Sagt</title>
+    <style>
+        body { font-family: Arial; background: #fff; padding: 40px; }
+        h1 { color: #222; }
+        .content { margin-top: 20px; }
+        .card { border: 1px solid #ddd; padding: 20px; border-radius: 6px; margin-bottom: 10px; }
+    </style>
 </head>
 <body>
-  <div class="dashboard">
-    <h1>Välkommen till den interna sidan</h1>
-    <p>Här kommer mer innehåll snart.</p>
-  </div>
+    <h1>Välkommen till adminpanelen!</h1>
+    <div class="content">
+        <div class="card">
+            <h2>Detta är bara en demo</h2>
+            <p>Här kan du senare hantera innehåll, användare, eller projekt.</p>
+        </div>
+    </div>
 </body>
 </html>
