--- a/index.html
+++ b/index.html
@@ -1,19 +1,33 @@
-
 <!DOCTYPE html>
 <html lang="sv">
 <head>
     <meta charset="UTF-8">
-    <title>Rätt sagt – Admininloggning</title>
+    <title>Rätt Sagt – Logga in</title>
+    <style>
+        body { font-family: Arial, sans-serif; background: #f4f4f4; display: flex; height: 100vh; align-items: center; justify-content: center; }
+        .login-box { background: white; padding: 30px; border-radius: 8px; box-shadow: 0 0 10px rgba(0,0,0,0.1); text-align: center; }
+        input[type="password"], input[type="text"] { padding: 10px; margin: 10px 0; width: 100%; }
+        button { padding: 10px 20px; background: #222; color: white; border: none; cursor: pointer; }
+    </style>
 </head>
 <body>
-    <h1>Välkommen till Rätt sagt Adminpanel</h1>
-    <form action="/admin" method="post">
-        <label for="username">Användarnamn:</label>
-        <input type="text" id="username" name="username" required><br><br>
-        <label for="password">Lösenord:</label>
-        <input type="password" id="password" name="password" required><br><br>
-        <input type="submit" value="Logga in">
-    </form>
-    <p><strong>Observera:</strong> Använd lösenordet <code>Rattsagt2025</code></p>
+    <div class="login-box">
+        <h2>Logga in</h2>
+        <input type="text" id="username" placeholder="Användarnamn">
+        <input type="password" id="password" placeholder="Lösenord">
+        <button onclick="login()">Logga in</button>
+        <p id="message" style="color: red;"></p>
+    </div>
+    <script>
+        function login() {
+            const user = document.getElementById('username').value;
+            const pass = document.getElementById('password').value;
+            if (user === 'Byggare10' && pass === 'Rattsagt2025') {
+                window.location.href = 'dashboard.html';
+            } else {
+                document.getElementById('message').innerText = 'Fel användarnamn eller lösenord. Försök igen.';
+            }
+        }
+    </script>
 </body>
 </html>
