--- a/dashboard.html
+++ b/dashboard.html
@@ -1,22 +1,39 @@
 <!DOCTYPE html>
 <html lang="sv">
 <head>
-    <meta charset="UTF-8">
-    <title>Adminpanel – Rätt Sagt</title>
-    <style>
-        body { font-family: Arial; background: #fff; padding: 40px; }
-        h1 { color: #222; }
-        .content { margin-top: 20px; }
-        .card { border: 1px solid #ddd; padding: 20px; border-radius: 6px; margin-bottom: 10px; }
-    </style>
+  <meta charset="UTF-8">
+  <title>Rätt Sagt – Startsida</title>
+  <style>
+    body {
+      font-family: sans-serif;
+      background: #f4f4f4;
+      text-align: center;
+      padding: 40px;
+    }
+    h1 {
+      color: #333;
+    }
+    ul {
+      list-style: none;
+      padding: 0;
+    }
+    li {
+      margin: 10px;
+    }
+    a {
+      text-decoration: none;
+      color: #0077cc;
+      font-weight: bold;
+    }
+  </style>
 </head>
 <body>
-    <h1>Välkommen till adminpanelen!</h1>
-    <div class="content">
-        <div class="card">
-            <h2>Detta är bara en demo</h2>
-            <p>Här kan du senare hantera innehåll, användare, eller projekt.</p>
-        </div>
-    </div>
+  <h1>Välkommen Byggare10</h1>
+  <p>Du är nu inloggad i systemet.</p>
+  <ul>
+    <li><a href="admin.html">🛠 Adminpanel</a></li>
+    <li><a href="settings.html">⚙️ Inställningar</a></li>
+    <li><a href="logg.html">📜 Händelselogg</a></li>
+  </ul>
 </body>
 </html>
