adminpanel, bibliotek, gpt, index, inställ, logg

--- a/index.html
+++ b/index.html
@@ -1,14 +1,16 @@
 <!DOCTYPE html>
 <html lang="sv">
 <head>
-  <meta charset="UTF-8">
-  <title>Logga in – Rätt Sagt</title>
+  <meta charset="UTF-8" />
+  <title>Välkommen Byggare10</title>
 </head>
 <body>
-  <form action="dashboard.html" method="get">
-    <label for="password">Lösenord:</label>
-    <input type="password" id="password" name="password" required>
-    <button type="submit">Logga in</button>
-  </form>
+  <h1>Välkommen Byggare10</h1>
+  <ul>
+    <li><a href="adminpanel.html">Adminpanel</a></li>
+    <li><a href="inställningar.html">Inställningar</a></li>
+    <li><a href="logg.html">Logg</a></li>
+    <li><a href="gpt.html">Prata med GPT</a></li>
+  </ul>
 </body>
 </html>
