admin, bibliotek,index, inställ, logg, resa, style

--- a/inställningar.html
+++ b/inställningar.html
@@ -1,1 +1,1 @@
-<h2>Inställningar</h2><p>Ändra lösenord, språk och andra inställningar.</p>
+<html><body><h2>Inställningar</h2><p>Anpassa systemet här.</p></body></html>
