admin, gpt, index, inställ,min-resa

--- a/admin.html
+++ b/admin.html
@@ -1,1 +1,1 @@
-<html><body><h2>Adminpanel</h2><p>Här kommer all adminfunktionalitet.</p></body></html>
+<h2>Adminpanel</h2><p>Här kan du styra innehållet på sidan.</p>
