--- a/gpt.html
+++ b/gpt.html
@@ -1,1 +1,4 @@
-<h2>GPT-assistent</h2><p>Tryck här för att starta GPT-chatt.</p>
+
+<h2>GPT-knappen</h2>
+<p>Här kan du starta en ny chatt direkt i dashboarden – med hela din resa sparad.</p>
+<button onclick="alert('GPT-öppning simulerad!')">Starta GPT</button>
