--- a/index.html
+++ b/index.html
@@ -1,1 +1,18 @@
-<html><head><title>Välkommen</title></head><body><h1>Välkommen Byggare10</h1><ul><li><a href='admin.html'>Adminpanel</a></li><li><a href='logg.html'>Logg</a></li><li><a href='inställningar.html'>Inställningar</a></li><li><a href='bibliotek.html'>Bibliotek</a></li><li><a href='resa.html'>Min resa</a></li><li><button onclick='startGPT()'>Starta GPT</button></li></ul><script>function startGPT(){alert('GPT-starten är inte kopplad ännu, men redo att kopplas.');}</script></body></html>
+
+<!DOCTYPE html>
+<html lang="sv">
+<head>
+    <meta charset="UTF-8">
+    <title>Välkommen Byggare10</title>
+</head>
+<body>
+    <h1>Välkommen Byggare10!</h1>
+    <p>Vad vill du göra idag?</p>
+    <ul>
+        <li><a href="admin.html">Gå till Adminpanelen</a></li>
+        <li><a href="min-resa.html">Min Resa</a></li>
+        <li><a href="inställningar.html">Inställningar</a></li>
+        <li><a href="gpt.html">Fråga GPT</a></li>
+    </ul>
+</body>
+</html>
