--- a/inställningar.html
+++ b/inställningar.html
@@ -1,1 +1,1 @@
-<html><body><h2>Inställningar</h2><p>Anpassa systemet här.</p></body></html>
+<h2>Inställningar</h2><p>Justera dina personliga val.</p>
