--- a/min-resa.html
+++ b/min-resa.html
@@ -1,1 +1,1 @@
-<h2>Min Resa</h2><p>Här ser du din översikt och allt vi har byggt tillsammans.</p>
+<!-- Sammanfattning av allt som bestämts och byggts -->
