--- a/index.html
+++ b/index.html
@@ -1,18 +1,1 @@
-
-<!DOCTYPE html>
-<html lang="sv">
-<head>
-    <meta charset="UTF-8">
-    <title>Välkommen Byggare10</title>
-</head>
-<body>
-    <h1>Välkommen Byggare10!</h1>
-    <p>Vad vill du göra idag?</p>
-    <ul>
-        <li><a href="admin.html">Gå till Adminpanelen</a></li>
-        <li><a href="min-resa.html">Min Resa</a></li>
-        <li><a href="inställningar.html">Inställningar</a></li>
-        <li><a href="gpt.html">Fråga GPT</a></li>
-    </ul>
-</body>
-</html>
+<!-- Inloggningssida med användarnamn/lösenord -->
