index, resa,admin, inställ, logg

--- a/gpt.html
+++ b/gpt.html
@@ -1,4 +1,1 @@
-
-<h2>GPT-knappen</h2>
-<p>Här kan du starta en ny chatt direkt i dashboarden – med hela din resa sparad.</p>
-<button onclick="alert('GPT-öppning simulerad!')">Starta GPT</button>
+<!DOCTYPE html><html><body><h1>GPT-assistent</h1><p>Här kommer GPT-funktionalitet.</p></body></html>
