--- a/resa.html
+++ b/resa.html
@@ -1,1 +1,1 @@
-<html><body><h2>Min resa</h2><p>Det här är platsen där alla beslut, steg och processer sparas automatiskt.</p></body></html>
+<!DOCTYPE html><html><body><h1>Min resa</h1></body></html>
