dash, gpt, index, mresa,readme, session,style

--- a/dashboard.html
+++ b/dashboard.html
@@ -1,1 +1,1 @@
-<!-- Välkommen Byggare10 + länkar till admin, logg, inställningar -->
+<!DOCTYPE html><html><head><title>Dashboard</title></head><body><h1>Välkommen Byggare10</h1><a href='min-resa.html'>Min resa</a> <button onclick='openGPT()'>GPT</button><script src='gpt-button.js'></script></body></html>
