--- a/min-resa.html
+++ b/min-resa.html
@@ -1,1 +1,1 @@
-<!-- Sammanfattning av allt som bestämts och byggts -->
+<!DOCTYPE html><html><head><title>Min resa</title></head><body><h2>Din resa hittills</h2><ul><li>Allt sparas här.</li></ul></body></html>
