--- a/index.html
+++ b/index.html
@@ -1,20 +1,1 @@
-
-<!DOCTYPE html>
-<html lang="sv">
-<head>
-    <meta charset="UTF-8" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
-    <title>Rätt Sagt - Dashboard</title>
-</head>
-<body style="font-family: sans-serif; text-align: center; padding: 50px;">
-    <h1>Välkommen Byggare10</h1>
-    <p>Du är nu inloggad.</p>
-    <nav>
-        <a href="/admin.html">Gå till Adminpanelen</a><br/>
-        <a href="/resa.html">Min resa</a><br/>
-        <a href="/logg.html">Logg</a><br/>
-        <a href="/inställningar.html">Inställningar</a><br/>
-        <a href="/gpt.html">GPT-assistent</a>
-    </nav>
-</body>
-</html>
+<!DOCTYPE html><html><head><title>Logga in</title></head><body><h2>Logga in</h2><form><input type='text' placeholder='Användarnamn'><input type='password' placeholder='Lösenord'><button>Logga in</button></form></body></html>
