dash,gpt,index,login,mresa,readme,style

--- a/dashboard.html
+++ b/dashboard.html
@@ -2,25 +2,21 @@
 <!DOCTYPE html>
 <html lang="sv">
 <head>
-    <meta charset="UTF-8">
-    <title>Dashboard</title>
-    <script>
-        window.onload = function () {
-            if (sessionStorage.getItem("loggedIn") !== "true") {
-                window.location.href = "index.html";
-            }
-        }
-    </script>
+  <meta charset="UTF-8" />
+  <title>Dashboard</title>
+  <link rel="stylesheet" href="style.css" />
 </head>
 <body>
-    <h1>Välkommen Byggare10</h1>
-    <p>Du är nu inloggad.</p>
+  <h1>Välkommen Byggare10</h1>
+  <nav>
     <ul>
-        <li><a href="#">Adminpanelen</a></li>
-        <li><a href="#">Min resa</a></li>
-        <li><a href="#">Logg</a></li>
-        <li><a href="#">Inställningar</a></li>
-        <li><a href="#">GPT-assistent</a></li>
+      <li><a href="min-resa.html">Min resa</a></li>
+      <li><a href="#" onclick="openGPT()">GPT-assistent</a></li>
+      <li><a href="#">Adminpanel</a></li>
+      <li><a href="#">Inställningar</a></li>
+      <li><a href="#">Logg</a></li>
     </ul>
+  </nav>
+  <script src="gpt-button.js"></script>
 </body>
 </html>
