--- a/min-resa.html
+++ b/min-resa.html
@@ -1,1 +1,17 @@
-<!DOCTYPE html><html><head><title>Min resa</title></head><body><h2>Din resa hittills</h2><ul><li>Allt sparas här.</li></ul></body></html>
+
+<!DOCTYPE html>
+<html lang="sv">
+<head>
+  <meta charset="UTF-8" />
+  <title>Min resa</title>
+  <link rel="stylesheet" href="style.css" />
+</head>
+<body>
+  <h2>Min resa</h2>
+  <p>✅ Inloggningssida klar<br>
+     ✅ Dashboard med länkar<br>
+     ✅ GPT-knapp<br>
+     ✅ Min resa-översikt<br>
+     🔄 Nästa steg: mer interaktivitet & minnesfunktioner</p>
+</body>
+</html>
