--- a/index.html
+++ b/index.html
@@ -2,25 +2,18 @@
 <!DOCTYPE html>
 <html lang="sv">
 <head>
-    <meta charset="UTF-8">
-    <title>Logga in</title>
-    <script>
-        function login() {
-            const user = document.getElementById('user').value;
-            const pass = document.getElementById('pass').value;
-            if (user === "Byggare10" && pass === "Rattsagt2025") {
-                sessionStorage.setItem("loggedIn", "true");
-                window.location.href = "dashboard.html";
-            } else {
-                alert("Fel användarnamn eller lösenord.");
-            }
-        }
-    </script>
+  <meta charset="UTF-8" />
+  <title>Logga in</title>
+  <link rel="stylesheet" href="style.css" />
 </head>
 <body>
+  <div class="login-container">
     <h2>Logga in</h2>
-    <input type="text" id="user" placeholder="Användarnamn">
-    <input type="password" id="pass" placeholder="Lösenord">
+    <input type="text" id="username" placeholder="Användarnamn" />
+    <input type="password" id="password" placeholder="Lösenord" />
     <button onclick="login()">Logga in</button>
+    <p id="login-error"></p>
+  </div>
+  <script src="login.js"></script>
 </body>
 </html>
