assed, css, data,js,dash,index,readme

--- a/dashboard.html
+++ b/dashboard.html
@@ -1,22 +1,1 @@
-
-<!DOCTYPE html>
-<html lang="sv">
-<head>
-  <meta charset="UTF-8" />
-  <title>Dashboard</title>
-  <link rel="stylesheet" href="style.css" />
-</head>
-<body>
-  <h1>Välkommen Byggare10</h1>
-  <nav>
-    <ul>
-      <li><a href="min-resa.html">Min resa</a></li>
-      <li><a href="#" onclick="openGPT()">GPT-assistent</a></li>
-      <li><a href="#">Adminpanel</a></li>
-      <li><a href="#">Inställningar</a></li>
-      <li><a href="#">Logg</a></li>
-    </ul>
-  </nav>
-  <script src="gpt-button.js"></script>
-</body>
-</html>
+<!-- Dashboard with welcome, todo, news -->
