--- a/index.html
+++ b/index.html
@@ -1,19 +1,1 @@
-
-<!DOCTYPE html>
-<html lang="sv">
-<head>
-  <meta charset="UTF-8" />
-  <title>Logga in</title>
-  <link rel="stylesheet" href="style.css" />
-</head>
-<body>
-  <div class="login-container">
-    <h2>Logga in</h2>
-    <input type="text" id="username" placeholder="Användarnamn" />
-    <input type="password" id="password" placeholder="Lösenord" />
-    <button onclick="login()">Logga in</button>
-    <p id="login-error"></p>
-  </div>
-  <script src="login.js"></script>
-</body>
-</html>
+<!-- Login page HTML -->
