--- a/dashboard.html
+++ b/dashboard.html
@@ -5,11 +5,32 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <title>Dashboard – Rattsagt.se</title>
   <link rel="stylesheet" href="style.css" />
+  <script src="gpt-button.js" defer></script>
 </head>
 <body>
-  <div class="container">
-    <h1>Välkommen till din dashboard!</h1>
-    <p>Du är nu inloggad.</p>
-  </div>
+  <header>
+    <h1>Välkommen Byggare10</h1>
+    <p>Din personliga kontrollpanel</p>
+  </header>
+
+  <main>
+    <section>
+      <h2>Senaste händelser</h2>
+      <p>Systemet är klart att använda. Allt sparas automatiskt.</p>
+    </section>
+
+    <section>
+      <h2>Att göra</h2>
+      <ul>
+        <li>🟢 Ladda upp första dokumentet</li>
+        <li>🟢 Testa GPT-knappen</li>
+      </ul>
+    </section>
+
+    <section>
+      <h2>Verktyg</h2>
+      <button id="gptChatButton">Starta GPT-chatt</button>
+    </section>
+  </main>
 </body>
 </html>
