--- a/dashboard.html
+++ b/dashboard.html
@@ -24,7 +24,22 @@
       <ul>
         <li>🟢 Ladda upp första dokumentet</li>
         <li>🟢 Testa GPT-knappen</li>
+        <li>🔵 Lägg till en ny idé i ”Min resa”</li>
+        <li>🟡 Skapa en plan för lansering</li>
       </ul>
+    </section>
+
+    <section>
+      <h2>Varningar & Möjligheter</h2>
+      <ul>
+        <li>⚠️ Ingen backup sparad ännu – gör det i biblioteket</li>
+        <li>💡 Möjlighet: Bjud in en samarbetspartner direkt</li>
+      </ul>
+    </section>
+
+    <section>
+      <h2>Intäktsöversikt</h2>
+      <p>Inga data än – koppla ekonomisystemet eller lägg in manuellt.</p>
     </section>
 
     <section>
