--- a/min-resa.html
+++ b/min-resa.html
@@ -1,17 +1,31 @@
-
 <!DOCTYPE html>
 <html lang="sv">
 <head>
   <meta charset="UTF-8" />
-  <title>Min resa</title>
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <title>Min resa – Rattsagt.se</title>
   <link rel="stylesheet" href="style.css" />
 </head>
 <body>
-  <h2>Min resa</h2>
-  <p>✅ Inloggningssida klar<br>
-     ✅ Dashboard med länkar<br>
-     ✅ GPT-knapp<br>
-     ✅ Min resa-översikt<br>
-     🔄 Nästa steg: mer interaktivitet & minnesfunktioner</p>
+  <header>
+    <h1>Min resa</h1>
+    <p>Här ser du vad som hänt i projektet och kan enkelt återstarta exakt där du var.</p>
+  </header>
+
+  <main>
+    <section>
+      <h2>Senaste steg</h2>
+      <ul>
+        <li>✅ Inloggning aktiverad</li>
+        <li>✅ Dashboard på plats</li>
+        <li>🔄 Nästa: Aktivera GPT-minne</li>
+      </ul>
+    </section>
+
+    <section>
+      <h2>Vad händer härnäst?</h2>
+      <p>Systemet uppdateras löpande. Du kan när som helst återgå till denna sida för att fortsätta ditt arbete.</p>
+    </section>
+  </main>
 </body>
 </html>
