--- a/bibliotek.html
+++ b/bibliotek.html
@@ -1,1 +1,19 @@
-<html><body><h2>Bibliotek</h2><p>Här lagras viktiga filer och dokument.</p></body></html>
+
+<!DOCTYPE html>
+<html lang="sv">
+<head>
+    <meta charset="UTF-8">
+    <title>Bibliotek</title>
+    <link rel="stylesheet" href="style.css">
+</head>
+<body>
+    <h1>📚 Biblioteket</h1>
+    <p>Här kan du samla alla viktiga dokument, texter och filer.</p>
+    <ul>
+        <li><a href="#">Fil: Affärsplan.pdf</a></li>
+        <li><a href="#">Fil: Strategi2025.docx</a></li>
+        <li><a href="#">Fil: Logotyp.png</a></li>
+    </ul>
+    <p>Funktion för uppladdning och GPT-integrering kommer.</p>
+</body>
+</html>
