--- a/ekonomi.html
+++ b/ekonomi.html
@@ -1,3 +1,4 @@
+
 <!DOCTYPE html>
 <html lang="sv">
 <head>
@@ -7,21 +8,21 @@
 </head>
 <body>
     <h1>💼 Ekonomi & Skatteplanering</h1>
-    <section>
+    <p>Här kommer du kunna planera lön, utdelning och moms. Systemet är förberett för framtida automatisk rådgivning.</p>
+
+    <div class="section">
         <h2>Lön & Utdelning</h2>
-        <p>Planera hur mycket du kan ta ut i lön eller utdelning baserat på företagets ekonomi.</p>
-    </section>
-    <section>
-        <h2>Moms & Skatter</h2>
-        <p>Grundläggande information och påminnelser om moms och skatteinbetalningar.</p>
-    </section>
-    <section>
-        <h2>Kommande Funktioner</h2>
-        <ul>
-            <li>Automatiska skatteberäkningar</li>
-            <li>Rådgivning från GPT</li>
-            <li>Intäkts- och kostnadsanalys</li>
-        </ul>
-    </section>
+        <p>Lägg till information manuellt eller koppla till ett ekonomisystem.</p>
+    </div>
+
+    <div class="section">
+        <h2>Moms & Bokföring</h2>
+        <p>Översikt och påminnelser för viktiga datum och regler.</p>
+    </div>
+
+    <div class="section">
+        <h2>Skattestruktur</h2>
+        <p>Verktyg för att visualisera och planera beskattning.</p>
+    </div>
 </body>
 </html>
