--- a/dashboard.html
+++ b/dashboard.html
@@ -1,51 +1,44 @@
+
 <!DOCTYPE html>
 <html lang="sv">
 <head>
-  <meta charset="UTF-8" />
-  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <title>Dashboard – Rattsagt.se</title>
-  <link rel="stylesheet" href="style.css" />
-  <script src="gpt-button.js" defer></script>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <title>Rätt Sagt – Dashboard</title>
+    <link rel="stylesheet" href="style.css" />
 </head>
 <body>
-  <header>
-    <h1>Välkommen Byggare10</h1>
-    <p>Din personliga kontrollpanel</p>
-  </header>
-
-  <main>
-    <section>
-      <h2>Senaste händelser</h2>
-      <p>Systemet är klart att använda. Allt sparas automatiskt.</p>
-    </section>
-
-    <section>
-      <h2>Att göra</h2>
-      <ul>
-        <li>🟢 Ladda upp första dokumentet</li>
-        <li>🟢 Testa GPT-knappen</li>
-        <li>🔵 Lägg till en ny idé i ”Min resa”</li>
-        <li>🟡 Skapa en plan för lansering</li>
-      </ul>
-    </section>
-
-    <section>
-      <h2>Varningar & Möjligheter</h2>
-      <ul>
-        <li>⚠️ Ingen backup sparad ännu – gör det i biblioteket</li>
-        <li>💡 Möjlighet: Bjud in en samarbetspartner direkt</li>
-      </ul>
-    </section>
-
-    <section>
-      <h2>Intäktsöversikt</h2>
-      <p>Inga data än – koppla ekonomisystemet eller lägg in manuellt.</p>
-    </section>
-
-    <section>
-      <h2>Verktyg</h2>
-      <button id="gptChatButton">Starta GPT-chatt</button>
-    </section>
-  </main>
+    <header>
+        <h1>Välkommen till din Dashboard</h1>
+    </header>
+    <main>
+        <section class="dashboard-section">
+            <h2>📌 Senaste viktiga händelser</h2>
+            <ul><li>Inga nya händelser ännu</li></ul>
+        </section>
+        <section class="dashboard-section">
+            <h2>📝 Att göra-lista</h2>
+            <ul><li>Skapa affärsplan</li><li>Gå igenom varumärkesstrategi</li></ul>
+        </section>
+        <section class="dashboard-section">
+            <h2>⚠️ Varningar & Möjligheter</h2>
+            <ul><li>Ingen varning registrerad</li></ul>
+        </section>
+        <section class="dashboard-section">
+            <h2>📊 Intäktsöversikt</h2>
+            <p>Inga data ännu – koppla ekonomisystemet eller lägg in manuellt.</p>
+        </section>
+        <section class="dashboard-section">
+            <h2>💼 Ekonomi & Skatteplanering</h2>
+            <ul>
+                <li><strong>Lön:</strong> Ej definierad</li>
+                <li><strong>Utdelning:</strong> Ej angiven</li>
+                <li><strong>Moms:</strong> Ingen info tillagd</li>
+            </ul>
+            <p style="font-style: italic;">GPT-rådgivning kan aktiveras när systemet är kopplat.</p>
+        </section>
+        <button id="gptButton">🔵 Fråga GPT</button>
+    </main>
+    <script src="gpt-button.js"></script>
 </body>
 </html>
