--- a/dashboard.html
+++ b/dashboard.html
@@ -1,52 +1,40 @@
+
 <!DOCTYPE html>
 <html lang="sv">
 <head>
     <meta charset="UTF-8">
-    <title>Rätt Sagt Dashboard</title>
+    <title>Rätt Sagt – Dashboard</title>
     <link rel="stylesheet" href="style.css">
-    <script src="bibliotek.js" defer></script>
+    <script defer src="header.js"></script>
 </head>
 <body>
-    <h1>Välkommen till din dashboard</h1>
+    <header class="main-header">
+        <div class="header-content">
+            <h1>Rätt Sagt</h1>
+            <div class="user-info">Inloggad som: Användare</div>
+        </div>
+    </header>
 
-    <section id="senaste">
-        <h2>✅ Senaste viktiga händelser</h2>
-        <ul>
-            <li>Projekt initierat</li>
-            <li>Inloggning aktiverad</li>
-            <li>Dashboard uppdaterad</li>
-        </ul>
-    </section>
-
-    <section id="todo">
-        <h2>✅ Att göra-lista</h2>
-        <ul>
-            <li>Färdigställ GPT-chatt</li>
-            <li>Lägg till datakoppling till ekonomi</li>
-            <li>Testa dashboarden från annan enhet</li>
-        </ul>
-    </section>
-
-    <section id="alerts">
-        <h2>✅ Varningar & Möjligheter</h2>
-        <p>Allt fungerar just nu – fortsätt utvecklingen!</p>
-    </section>
-
-    <section id="income">
-        <h2>✅ Intäktsöversikt</h2>
-        <p>Inga data än – koppla ekonomisystemet eller lägg till manuellt.</p>
-    </section>
-
-    <section id="gpt">
-        <h2>✅ GPT-knapp</h2>
-        <button onclick="alert('GPT-knapp tryckt – funktionalitet läggs till senare.')">Starta GPT</button>
-    </section>
-
-    <section id="bibliotek">
-        <h2>✅ Biblioteket – ladda upp & visa filer</h2>
-        <input type="file" id="fileInput" />
-        <button onclick="uploadFile()">Ladda upp</button>
-        <div id="fileList"></div>
-    </section>
+    <main class="content">
+        <section id="viktigaste-handelser">
+            <h2>Senaste viktiga händelser</h2>
+        </section>
+        <section id="att-gora">
+            <h2>Att göra-lista</h2>
+        </section>
+        <section id="varningar">
+            <h2>Varningar & Möjligheter</h2>
+        </section>
+        <section id="intakter">
+            <h2>Intäktsöversikt</h2>
+        </section>
+        <section id="bibliotek">
+            <h2>📚 Biblioteket – ladda upp & visa filer</h2>
+            <input type="file" id="fileInput" />
+            <button onclick="uploadFile()">Ladda upp</button>
+            <ul id="fileList"></ul>
+        </section>
+        <button id="gpt-button">🔵 GPT-knapp</button>
+    </main>
 </body>
 </html>
