--- a/dashboard.html
+++ b/dashboard.html
@@ -1,49 +1,35 @@
+
 <!DOCTYPE html>
 <html lang="sv">
 <head>
     <meta charset="UTF-8">
-    <title>Rätt sagt – Dashboard</title>
+    <title>Rätt Sagt Dashboard</title>
     <link rel="stylesheet" href="style.css">
+    <script src="dashboard.js" defer></script>
 </head>
 <body>
-    <header>
-        <div class="logo">Rätt sagt</div>
-        <div class="user-info">Välkommen, användare</div>
-    </header>
-
-    <main>
-        <section id="senaste-handelser">
-            <h2>📌 Senaste viktiga händelser</h2>
-            <ul><li>Inga händelser ännu.</li></ul>
-        </section>
-
-        <section id="att-gora">
-            <h2>✅ Att göra-lista</h2>
-            <ul><li>Inga uppgifter ännu.</li></ul>
-        </section>
-
-        <section id="varningar">
-            <h2>⚠️ Varningar & Möjligheter</h2>
-            <p>Inga varningar just nu.</p>
-        </section>
-
-        <section id="intakter">
-            <h2>💰 Intäktsöversikt</h2>
-            <p>Inga data än – koppla ekonomisystem eller lägg in manuellt.</p>
-        </section>
-
-        <section id="gpt-knapp">
-            <h2>🧠 GPT-knapp</h2>
-            <button onclick="startGPT()">Starta GPT</button>
-        </section>
-
-        <section id="bibliotek">
-            <h2>📚 Biblioteket – ladda upp & visa filer</h2>
-            <input type="file" id="fileInput">
-            <ul id="fileList"></ul>
-        </section>
-    </main>
-
-    <script src="dashboard.js"></script>
+    <div class="top-bar">Rätt Sagt – Dashboard</div>
+    <div class="section"><h2>Senaste viktiga händelser</h2><p>(Ingen data än)</p></div>
+    <div class="section"><h2>Att göra-lista</h2><ul><li>Exempel: Lägg till uppgift</li></ul></div>
+    <div class="section"><h2>Varningar & Möjligheter</h2><p>(Inga varningar)</p></div>
+    <div class="section"><h2>Intäktsöversikt</h2><p>Inga data ännu – koppla ekonomisystem eller lägg till manuellt</p></div>
+    <div class="section"><h2>GPT-knapp</h2><button onclick="startGPT()">Starta GPT</button></div>
+    <div class="section">
+        <h2>Biblioteket – ladda upp & visa filer</h2>
+        <input type="file" id="fileInput"><button onclick="uploadFile()">Ladda upp</button>
+        <ul id="fileList"></ul>
+    </div>
+    <div class="section">
+        <h2>Ekonomi</h2>
+        <ul>
+            <li>Lön: Ej konfigurerat</li>
+            <li>Skatt/Utdelning: Ej konfigurerat</li>
+            <li>Moms: Ej konfigurerat</li>
+        </ul>
+    </div>
+    <div class="section">
+        <h2>Min resa</h2>
+        <p>Här kommer en framtida sammanställning av vad du och GPT gjort tillsammans.</p>
+    </div>
 </body>
 </html>
