--- a/ekonomi.html
+++ b/ekonomi.html
@@ -1,28 +1,21 @@
 
-<!DOCTYPE html>
-<html lang="sv">
-<head>
-    <meta charset="UTF-8">
-    <title>Ekonomi & Skatteplanering</title>
-    <link rel="stylesheet" href="style.css">
-</head>
-<body>
-    <h1>💼 Ekonomi & Skatteplanering</h1>
-    <p>Här kommer du kunna planera lön, utdelning och moms. Systemet är förberett för framtida automatisk rådgivning.</p>
-
-    <div class="section">
-        <h2>Lön & Utdelning</h2>
-        <p>Lägg till information manuellt eller koppla till ett ekonomisystem.</p>
-    </div>
-
-    <div class="section">
-        <h2>Moms & Bokföring</h2>
-        <p>Översikt och påminnelser för viktiga datum och regler.</p>
-    </div>
-
-    <div class="section">
-        <h2>Skattestruktur</h2>
-        <p>Verktyg för att visualisera och planera beskattning.</p>
-    </div>
-</body>
-</html>
+    <section id="ekonomi">
+        <h2>💼 Ekonomi & Skatteplanering</h2>
+        <div class="ekonomi-ruta">
+            <h3>Lön</h3>
+            <p>Registrera eller planera uttag.</p>
+        </div>
+        <div class="ekonomi-ruta">
+            <h3>Utdelning</h3>
+            <p>Beräkna och spåra utdelningsmöjligheter.</p>
+        </div>
+        <div class="ekonomi-ruta">
+            <h3>Moms & Skatter</h3>
+            <p>Se deadlines, belopp och tips.</p>
+        </div>
+        <div class="ekonomi-ruta">
+            <h3>Automatisering (Kommer snart)</h3>
+            <p>Rådgivning & analys via GPT & verktyg.</p>
+        </div>
+    </section>
+    
