--- a/dashboard.html
+++ b/dashboard.html
@@ -3,33 +3,25 @@
 <html lang="sv">
 <head>
     <meta charset="UTF-8">
-    <title>Rätt Sagt Dashboard</title>
+    <title>Ekonomi & Skatteplanering</title>
     <link rel="stylesheet" href="style.css">
-    <script src="dashboard.js" defer></script>
 </head>
 <body>
-    <div class="top-bar">Rätt Sagt – Dashboard</div>
-    <div class="section"><h2>Senaste viktiga händelser</h2><p>(Ingen data än)</p></div>
-    <div class="section"><h2>Att göra-lista</h2><ul><li>Exempel: Lägg till uppgift</li></ul></div>
-    <div class="section"><h2>Varningar & Möjligheter</h2><p>(Inga varningar)</p></div>
-    <div class="section"><h2>Intäktsöversikt</h2><p>Inga data ännu – koppla ekonomisystem eller lägg till manuellt</p></div>
-    <div class="section"><h2>GPT-knapp</h2><button onclick="startGPT()">Starta GPT</button></div>
-    <div class="section">
-        <h2>Biblioteket – ladda upp & visa filer</h2>
-        <input type="file" id="fileInput"><button onclick="uploadFile()">Ladda upp</button>
-        <ul id="fileList"></ul>
+    <div class="dashboard">
+        <h1>Ekonomi & Skatteplanering</h1>
+        <div class="sektion">
+            <h2>Lön</h2>
+            <p>Här kan du lägga in och följa upp löneutbetalningar.</p>
+        </div>
+        <div class="sektion">
+            <h2>Utdelning</h2>
+            <p>Översikt och planering av eventuell utdelning.</p>
+        </div>
+        <div class="sektion">
+            <h2>Moms & Skatt</h2>
+            <p>Beräkning, datum och betalningar.</p>
+        </div>
     </div>
-    <div class="section">
-        <h2>Ekonomi</h2>
-        <ul>
-            <li>Lön: Ej konfigurerat</li>
-            <li>Skatt/Utdelning: Ej konfigurerat</li>
-            <li>Moms: Ej konfigurerat</li>
-        </ul>
-    </div>
-    <div class="section">
-        <h2>Min resa</h2>
-        <p>Här kommer en framtida sammanställning av vad du och GPT gjort tillsammans.</p>
-    </div>
+    <script src="ekonomi.js"></script>
 </body>
 </html>
