--- a/dashboard.html
+++ b/dashboard.html
@@ -2,19 +2,64 @@
 <!DOCTYPE html>
 <html lang="sv">
 <head>
-  <meta charset="UTF-8" />
-  <title>Rätt sagt Dashboard</title>
-  <link rel="stylesheet" href="gpt-style.css" />
+    <meta charset="UTF-8">
+    <title>Rättsagt Dashboard</title>
+    <link rel="stylesheet" href="style.css">
+    <script src="gpt-button.js" defer></script>
+    <script src="bibliotek.js" defer></script>
 </head>
 <body>
-  <h1>Rätt sagt Dashboard</h1>
-  <button onclick="openGptChat()">GPT-knapp</button>
+    <header>
+        <h1>Rättsagt Dashboard</h1>
+    </header>
 
-  <div id="gpt-chat-window">
-    <p>Hej! Ställ en fråga eller be mig fortsätta där du var.</p>
-    <!-- Här kan man lägga till textfält och skicka-knapp -->
-  </div>
+    <section class="sektion">
+        <h2>Senaste viktiga händelser</h2>
+        <p>Här visas de senaste händelserna du behöver ha koll på.</p>
+    </section>
 
-  <script src="gpt-chat.js"></script>
+    <section class="sektion">
+        <h2>Att göra-lista</h2>
+        <ul>
+            <li>🔲 Sätt upp påminnelser</li>
+            <li>🔲 Följ upp ekonomi</li>
+            <li>🔲 Planera nästa steg</li>
+        </ul>
+    </section>
+
+    <section class="sektion">
+        <h2>Varningar & Möjligheter</h2>
+        <p>Inga aktuella varningar.</p>
+    </section>
+
+    <section class="sektion">
+        <h2>Intäktsöversikt</h2>
+        <p>Inga data än – koppla ekonomisystemet eller lägg in manuellt.</p>
+    </section>
+
+    <section class="sektion">
+        <h2>GPT-knapp</h2>
+        <button onclick="startGPT()">Starta GPT</button>
+    </section>
+
+    <section class="sektion">
+        <h2>Biblioteket – ladda upp och visa filer</h2>
+        <input type="file" id="fileInput" />
+        <ul id="fileList"></ul>
+    </section>
+
+    <section class="sektion">
+        <h2>Min resa</h2>
+        <p>Här kommer det en framtida sammanställning av vad du och GPT gjort tillsammans.</p>
+    </section>
+
+    <section class="sektion">
+        <h2>Ekonomi & Skatteplanering</h2>
+        <ul>
+            <li>Lön</li>
+            <li>Utdelning</li>
+            <li>Moms & Skatt</li>
+        </ul>
+    </section>
 </body>
 </html>
