--- a/dashboard.html
+++ b/dashboard.html
@@ -5,8 +5,8 @@
     <meta charset="UTF-8">
     <title>Rättsagt Dashboard</title>
     <link rel="stylesheet" href="style.css">
-    <script defer src="bibliotek.js"></script>
-    <script defer src="gpt-minne.js"></script>
+    <script src="gpt-button.js" defer></script>
+    <script src="bibliotek.js" defer></script>
 </head>
 <body>
     <header>
@@ -14,16 +14,43 @@
         <button onclick="startGPT()">🧠 GPT-knapp</button>
     </header>
 
-    <section>
-        <h2>Min resa</h2>
-        <div id="min-resa">
-            Här kommer det en framtida sammanställning av vad du och GPT gjort tillsammans.
-        </div>
+    <section id="viktigt">
+        <h2>📌 Senaste viktiga händelser</h2>
+        <ul><li>Inga händelser ännu.</li></ul>
     </section>
 
-    <section>
-        <h2>Biblioteket – ladda upp och visa filer</h2>
-        <input type="file" id="fileInput" />
+    <section id="todo">
+        <h2>✅ Att göra-lista</h2>
+        <ul><li>Inget att göra just nu.</li></ul>
+    </section>
+
+    <section id="alerts">
+        <h2>⚠️ Varningar & Möjligheter</h2>
+        <ul><li>Inga varningar.</li></ul>
+    </section>
+
+    <section id="intaktsoversikt">
+        <h2>📊 Intäktsöversikt</h2>
+        <p>Inga data ännu – koppla ekonomisystemet eller lägg in manuellt.</p>
+    </section>
+
+    <section id="ekonomi">
+        <h2>💼 Ekonomi & Skatteplanering</h2>
+        <ul>
+            <li>Lön</li>
+            <li>Utdelning</li>
+            <li>Moms & Skatt</li>
+        </ul>
+    </section>
+
+    <section id="min-resa">
+        <h2>🧠 Min resa</h2>
+        <p>Här kommer det en framtida sammanställning av vad du och GPT gjort tillsammans.</p>
+    </section>
+
+    <section id="biblioteket">
+        <h2>📚 Biblioteket – ladda upp och visa filer</h2>
+        <input type="file" id="fileInput">
         <button onclick="uploadFile()">Ladda upp</button>
         <ul id="fileList"></ul>
     </section>
