--- a/dashboard.html
+++ b/dashboard.html
@@ -3,56 +3,50 @@
 <html lang="sv">
 <head>
     <meta charset="UTF-8">
-    <title>Rättsagt Dashboard</title>
+    <title>Rätt sagt Dashboard</title>
     <link rel="stylesheet" href="style.css">
-    <script src="gpt-button.js" defer></script>
-    <script src="bibliotek.js" defer></script>
 </head>
 <body>
-    <header>
-        <h1>Rättsagt Dashboard</h1>
-        <button onclick="startGPT()">🧠 GPT-knapp</button>
-    </header>
+    <h1>Rätt sagt Dashboard</h1>
 
-    <section id="viktigt">
+    <section id="latest-events">
         <h2>📌 Senaste viktiga händelser</h2>
-        <ul><li>Inga händelser ännu.</li></ul>
+        <ul><li>Inga händelser än.</li></ul>
     </section>
 
-    <section id="todo">
+    <section id="todo-list">
         <h2>✅ Att göra-lista</h2>
-        <ul><li>Inget att göra just nu.</li></ul>
+        <p>Inget att göra just nu.</p>
     </section>
 
-    <section id="alerts">
+    <section id="warnings-opportunities">
         <h2>⚠️ Varningar & Möjligheter</h2>
-        <ul><li>Inga varningar.</li></ul>
+        <p>Inga varningar ännu.</p>
     </section>
 
-    <section id="intaktsoversikt">
-        <h2>📊 Intäktsöversikt</h2>
-        <p>Inga data ännu – koppla ekonomisystemet eller lägg in manuellt.</p>
+    <section id="revenue-overview">
+        <h2>💰 Intäktsöversikt</h2>
+        <p>Inga data än – koppla ekonomisystemet eller lägg in manuellt.</p>
     </section>
 
-    <section id="ekonomi">
-        <h2>💼 Ekonomi & Skatteplanering</h2>
-        <ul>
-            <li>Lön</li>
-            <li>Utdelning</li>
-            <li>Moms & Skatt</li>
-        </ul>
+    <section id="gpt-button">
+        <button onclick="startGPT()">🤖 Starta GPT</button>
     </section>
 
-    <section id="min-resa">
+    <section id="my-journey">
         <h2>🧠 Min resa</h2>
         <p>Här kommer det en framtida sammanställning av vad du och GPT gjort tillsammans.</p>
     </section>
 
-    <section id="biblioteket">
-        <h2>📚 Biblioteket – ladda upp och visa filer</h2>
+    <section id="library">
+        <h2>📚 Biblioteket – ladda upp & visa filer</h2>
         <input type="file" id="fileInput">
         <button onclick="uploadFile()">Ladda upp</button>
         <ul id="fileList"></ul>
     </section>
+
+    <script src="gpt-button.js"></script>
+    <script src="bibliotek.js"></script>
+    <script src="warnings.js"></script>
 </body>
 </html>
