--- a/dashboard.html
+++ b/dashboard.html
@@ -1,69 +1,15 @@
-
 <!DOCTYPE html>
 <html lang="sv">
 <head>
-  <meta charset="UTF-8" />
-  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <title>Rättsagt Dashboard</title>
-  <link rel="stylesheet" href="style.css" />
-  <script src="gpt-button.js" defer></script>
-  <script src="bibliotek.js" defer></script>
-  <script src="notiser.js" defer></script>
+    <meta charset="UTF-8" />
+    <title>Dashboard – Rattsagt</title>
+    <link rel="stylesheet" href="style.css" />
+    <script src="session-handler.js" defer></script>
 </head>
 <body>
-  <header>
-    <h1>Rättsagt Dashboard</h1>
-    <div class="blue-line"></div>
-  </header>
-
-  <main>
-    <section>
-      <h2>📌 Senaste viktiga händelser</h2>
-      <p>Inga nya notiser just nu.</p>
-    </section>
-
-    <section>
-      <h2>📝 Att göra-lista</h2>
-      <ul>
-        <li>✅ Skapa konto</li>
-        <li>🔜 Lägg till första dokumentet</li>
-      </ul>
-    </section>
-
-    <section>
-      <h2>⚠️ Varningar & Möjligheter</h2>
-      <p>Allt ser bra ut! Inga varningar.</p>
-    </section>
-
-    <section>
-      <h2>📊 Intäktsöversikt</h2>
-      <p>Inga data än – koppla ekonomisystemet eller lägg in manuellt.</p>
-    </section>
-
-    <section>
-      <h2>🧠 Min resa</h2>
-      <p>Här kommer det en framtida sammanställning av vad du och GPT gjort tillsammans.</p>
-    </section>
-
-    <section>
-      <h2>📚 Biblioteket – ladda upp & visa filer</h2>
-      <input type="file" id="fileInput" />
-      <button onclick="uploadFile()">Ladda upp</button>
-      <ul id="fileList"></ul>
-    </section>
-
-    <section>
-      <h2>💼 Ekonomi & Skatteplanering</h2>
-      <ul>
-        <li>💰 Lön</li>
-        <li>📈 Utdelning</li>
-        <li>📊 Moms & Skatt</li>
-      </ul>
-    </section>
-
-    <section>
-      <button id="gptChatButton">💬 Starta GPT-chatt</button>
-    </section>
-  </main>
+<div class="container">
+    <h1>Välkommen till din dashboard</h1>
+    <p>Här kommer all funktionalitet att samlas.</p>
+</div>
 </body>
 </html>
