--- a/bibliotek.html
+++ b/bibliotek.html
@@ -4,16 +4,13 @@
 <head>
     <meta charset="UTF-8">
     <title>Bibliotek</title>
-    <link rel="stylesheet" href="style.css">
+    <link rel="stylesheet" href="gpt-style.css">
 </head>
 <body>
-    <h1>📚 Biblioteket</h1>
-    <p>Här kan du samla alla viktiga dokument, texter och filer.</p>
-    <ul>
-        <li><a href="#">Fil: Affärsplan.pdf</a></li>
-        <li><a href="#">Fil: Strategi2025.docx</a></li>
-        <li><a href="#">Fil: Logotyp.png</a></li>
-    </ul>
-    <p>Funktion för uppladdning och GPT-integrering kommer.</p>
+    <h1>Biblioteket – ladda upp och visa filer</h1>
+    <input type="file" id="fileInput">
+    <button onclick="uploadFile()">Ladda upp</button>
+    <ul id="fileList"></ul>
+    <script src="gpt-minne.js"></script>
 </body>
 </html>
