--- a/min-resa.html
+++ b/min-resa.html
@@ -1,31 +1,13 @@
+
 <!DOCTYPE html>
 <html lang="sv">
 <head>
-  <meta charset="UTF-8" />
-  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <title>Min resa – Rattsagt.se</title>
-  <link rel="stylesheet" href="style.css" />
+    <meta charset="UTF-8">
+    <title>Min Resa</title>
+    <link rel="stylesheet" href="gpt-style.css">
 </head>
 <body>
-  <header>
     <h1>Min resa</h1>
-    <p>Här ser du vad som hänt i projektet och kan enkelt återstarta exakt där du var.</p>
-  </header>
-
-  <main>
-    <section>
-      <h2>Senaste steg</h2>
-      <ul>
-        <li>✅ Inloggning aktiverad</li>
-        <li>✅ Dashboard på plats</li>
-        <li>🔄 Nästa: Aktivera GPT-minne</li>
-      </ul>
-    </section>
-
-    <section>
-      <h2>Vad händer härnäst?</h2>
-      <p>Systemet uppdateras löpande. Du kan när som helst återgå till denna sida för att fortsätta ditt arbete.</p>
-    </section>
-  </main>
+    <p>Här kommer det en framtida sammanställning av vad du och GPT gjort tillsammans</p>
 </body>
 </html>
