--- a/dashboard.html
+++ b/dashboard.html
@@ -3,54 +3,43 @@
 <html lang="sv">
 <head>
     <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>RättSagt Dashboard</title>
+    <title>Rättsagt Dashboard</title>
     <link rel="stylesheet" href="style.css">
-    <script defer src="script.js"></script>
-    <script defer src="gpt-button.js"></script>
+    <script src="gpt-button.js" defer></script>
+    <script src="bibliotek.js" defer></script>
+    <script src="nyhetsflode.js" defer></script>
 </head>
 <body>
     <header>
-        <h1>RättSagt Dashboard</h1>
-        <button id="gptButton">GPT-knapp</button>
+        <h1>Rättsagt Dashboard</h1>
     </header>
-    <main>
-        <section id="notiser">
-            <h2>Senaste viktiga händelser</h2>
-            <ul id="notiser-lista"></ul>
-        </section>
-        <section id="att-gora">
-            <h2>Att göra-lista</h2>
-            <ul id="todo-list"></ul>
-            <input type="text" id="new-task" placeholder="Ny uppgift">
-            <button onclick="addTask()">Lägg till</button>
-        </section>
-        <section id="varningar">
-            <h2>Varningar & Möjligheter</h2>
-            <div id="varningar-lista"></div>
-        </section>
-        <section id="intakter">
-            <h2>Intäktsöversikt</h2>
-            <p>Inga data än – koppla ekonomisystemet eller lägg in manuellt.</p>
-        </section>
-        <section id="min-resa">
-            <h2>Min resa</h2>
-            <p>Här kommer det en framtida sammanställning av vad du och GPT gjort tillsammans.</p>
-        </section>
-        <section id="biblioteket">
-            <h2>Biblioteket – ladda upp & visa filer</h2>
-            <input type="file" id="fileInput">
-            <button onclick="uploadFile()">Ladda upp</button>
-            <ul id="fileList"></ul>
-        </section>
-        <section id="ekonomi">
-            <h2>Ekonomi & Skatteplanering</h2>
-            <ul>
-                <li>Lön</li>
-                <li>Utdelning</li>
-                <li>Moms & skatt</li>
-            </ul>
-        </section>
-    </main>
+
+    <section id="gpt-knapp">
+        <button onclick="startGpt()">GPT-knapp</button>
+    </section>
+
+    <section id="min-resa">
+        <h2>Min resa</h2>
+        <p>Här kommer det en framtida sammanställning av vad du och GPT gjort tillsammans</p>
+    </section>
+
+    <section id="att-gora">
+        <h2>Att göra-lista</h2>
+        <ul id="todo-list">
+            <li>✔️ Inget att göra just nu</li>
+        </ul>
+    </section>
+
+    <section id="bibliotek">
+        <h2>📚 Biblioteket – ladda upp och visa filer</h2>
+        <input type="file" id="fileInput">
+        <button onclick="uploadFile()">Ladda upp</button>
+        <ul id="fileList"></ul>
+    </section>
+
+    <section id="nyheter">
+        <h2>🗞️ Senaste viktiga händelser</h2>
+        <div id="news-container">Inga nyheter än.</div>
+    </section>
 </body>
 </html>
